# vtkQt6

./: .gitignore  CMakeLists.txt  LICENSE (MIT)  README.md
forms/: MainWindow.ui
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
